implement add, update, save, mark, list functions

--- a/taskTracker/tasks.json
+++ b/taskTracker/tasks.json
@@ -1,3 +1,5 @@
 [
-{"id":"0","description":"hello","status":"TODO","createAt":"2025-06-12T16:42:53.374257600","updateAt":"2025-06-12T16:42:53.374257600"}
+{"id":"0","description":"hi","status":"TODO","createAt":"2025-06-12T17:27:27","updateAt":"2025-06-12T17:27:27"},
+{"id":"2","description":"buy eggs","status":"TODO","createAt":"2025-06-12T18:20:14","updateAt":"2025-06-12T18:20:14"},
+{"id":"3","description":"ham and eggs","status":"TODO","createAt":"2025-06-12T18:20:39","updateAt":"2025-06-12T18:20:39"}
 ]
